# kwg-api

./: .gitignore  Dockerfile  README.md  Readme.md  config.json  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.stage.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
docs/: conf.py  content-negotiation.rst  deploying.rst  developing.rst  index.rst
kwg_api/: main.py
kwg_api/api/: node_negotiator.py  ontology_negotiator.py
kwg_api/lib/: content_negotiator.py  prefix_builder.py
kwg_api/resources/: vocabulary.json
kwg_api/resources/swagger/: info.json
src/: main.py
src/api/: content_negotiator.py  vocabulary_builder.py
src/resources/: vocabulary.json
tests/: test_content_negotiator.py  test_main.py  test_node_negotiator.py  test_vocabulary_builder.py
tests/utils/: shared_methods.py
