[tool.poetry]
name = "kwg-api"
version = "1.0.0"
description = "API for KnowwhereGraph"
authors = ["thomasthelen <tommythelen@gmail.com>"]
readme = "README.md"
packages = [{include = "kwg_api"}]

[tool.poetry.scripts]
start = "uvicorn kwg_api.main:app --reload"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
rdflib = "^6.3.2"
sparqlwrapper = "^2.0.0"
uvicorn = "^0.23.1"
jinja2 = "^3.1.2"
prometheus-fastapi-instrumentator = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.4.0"
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["./kwg_api", "./"]

[tool.mypy]
exclude = "docs/"
